# Code-edditor

./: .gitignore  a.ipynb  edditor.py  main.py  pyproject.toml  requirements.txt  test.py
who_knows/: a.html
